[project]
name = "bluesky-account-sync"
version = "0.1.0"
description = "Sync follows from one Bluesky account to another"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "atproto>=0.0.50",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "ty>=0.0.35",
]

[project.scripts]
follow-to-block = "follow_to_block:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["follow_to_block.py"]

